--- a/cn.zh-CN/监控运维/日志服务/云端运行日志.md
+++ b/cn.zh-CN/监控运维/日志服务/云端运行日志.md
@@ -237,6 +237,7 @@ TSL公共错误码如下表。
 |---|--|--|--|
 |6321|TSL中，属性对应的标识符identifier不存在。|系统异常。|可以通过提交工单排查。|
 |6317|TSL模型有错误。|系统异常。|可以通过提交工单排查。|
+|6332|传入的参数不符合TSL规范。|传入参数需要符合定义好的TSL规范。|在控制台产品详情中，查看设备所属产品的功能定义。核对传入的参数。|
 |6302|参数不存在。|TSL校验服务的入参时，服务要求的参数没有传。|在控制台产品详情中，查看设备所属产品的功能定义。服务查询调用、属性设置，查询对应服务的入参，核对传入的参数。|
 |6306|传入的参数，不符合TSL整形数据的规范。|TSL校验时： -   参数类型，和TSL中定义的类型不一致。
 -   传入的参数取值范围不符合功能定义时设置的参数范围。
