--- a/cn.zh-CN/设备管理/设备划归/设备分发.md
+++ b/cn.zh-CN/设备管理/设备划归/设备分发.md
@@ -1,13 +1,13 @@
 # 设备分发
 
-物联网平台通过设备分发实现设备跨地域、跨实例或跨账号的分发。分发后，云端下发新的连接地址给设备，设备本地固化收到的信息之后，直接连接新的地址，免去二次烧录设备信息。
+物联网平台通过设备分发实现设备跨地域、跨实例或跨账号的分发。分发后，云端下发新的连接地址给设备，设备本地固化收到信息之后，直接连接新的地址，免去二次烧录设备信息。
 
 ## 使用场景
 
 设备分发功能适用于以下场景：
 
 -   设备提前烧录：无需在设备出厂时对不同地域和不同实例的连接信息进行硬编码，设备统一烧录全球统一接入点信息（无地域信息）。设备出厂后，在物联网平台控制台对设备集中进行跨地域分发，实现设备全球接入。
--   业务迁移：由于业务的迁移，需要更改设备的接入地域或接入实例，可以进行设备分发，实现设备跨地域、跨实例、跨账号的变更。
+-   业务迁移：由于业务的迁移，需要更改设备的接入地域或接入实例，可通过设备分发，实现设备跨地域、跨实例、跨账号的变更。
 
 支持两种分发策略：
 
@@ -19,10 +19,11 @@
 -   支持在所有已开通物联网平台的地域之间分发设备。
 -   跨账号分发不支持在同地域的公共实例内部进行，即不支持在同一个实例内跨账号分发。
 -   跨账号分发不支持就近接入。
+-   指定地域分发支持仅分发产品，不分发设备。此时分发对象为产品数据，更多信息，请参见[设备分发对象](#section_729_lca_4aw)。
 -   支持多次分发。
 -   设备分发成功后，不能取消。
 -   如果产品下的设备进行过授权或转移操作，则该产品下的所有设备不可以进行分发操作。
--   设备跨地域、跨实例分发后，您在配置OTA升级时需要在物联网平台控制台切换到目标地域、目标实例后操作；设备跨账号分发后，由接收者配置OTA升级，升级包请从分发者获取。OTA升级操作，请参见[推送升级包到设备端](/cn.zh-CN/监控运维/OTA升级/推送升级包到设备端.md)。
+-   设备跨地域、跨实例分发后，您在配置OTA升级时需要在物联网平台控制台切换到目标地域、目标实例后操作；设备跨账号分发后，由接收者配置OTA升级，升级包请从分发者获取。具体操作，请参见[推送升级包到设备端](/cn.zh-CN/监控运维/OTA升级/推送升级包到设备端.md)。
 
 ## 设备分发对象
 
@@ -41,13 +42,81 @@
 
 ## 设备分发流程
 
-1.  对于新设备，在物联网平台控制台创建产品与设备，获取物联网平台颁发的设备证书（ProductKey、DeviceName和DeviceSecret），参见[创建产品](/cn.zh-CN/设备接入/创建产品.md)、[单个创建设备](/cn.zh-CN/设备接入/创建设备/单个创建设备.md)或[批量创建设备](/cn.zh-CN/设备接入/创建设备/批量创建设备.md)。
+1.  对于新设备，在物联网平台控制台创建产品与设备，获取物联网平台颁发的设备证书（ProductKey、DeviceName和DeviceSecret）。具体操作，请参见[创建产品](/cn.zh-CN/设备接入/创建产品.md)、[单个创建设备](/cn.zh-CN/设备接入/创建设备/单个创建设备.md)或[批量创建设备](/cn.zh-CN/设备接入/创建设备/批量创建设备.md)。
 
-2.  使用阿里云提供的[4.x版本C SDK]()完成物理设备开发，使其实现如下功能，其中Bootstrap功能开发参见[设备分发服务]()文档。
+2.  选择阿里云提供的[4.x版本C SDK]()完成物理设备开发，或根据交互协议自行完成设备开发，使其实现如下功能。
+
+    **说明：** 推荐使用阿里云的C SDK完成设备开发。
 
     控制台对设备进行分发后，设备应按如下流程与云端建立连接：
 
-    1.  控制台分发设备后，设备会收到如下MQTT消息，代表设备发生了分发。
+    1.  根据设备开发场景，选择以下方式，发起接口Bootstrap请求。
+        -   阿里云C SDK接入方式
+
+            设备调用SDK封装的Bootstrap接口，携带ProductKey和DeviceName，向设备分发中心的全球统一域名`https://iot-auth-global.aliyuncs.com`发送请求。
+
+            其中，Bootstrap功能开发的具体操作，请参见[设备分发服务]()。
+
+        -   非SDK的自行接入方式
+
+            按照如下协议内容，向`https://iot-auth-global.aliyuncs.com/auth/bootstrap`发送请求。
+
+            |参数|是否必选|说明|
+            |--|----|--|
+            |productKey|必选|设备所属产品的ProductKey，从物联网平台控制台获取。具体操作，请参见[单个创建设备](/cn.zh-CN/设备接入/创建设备/单个创建设备.md)。 |
+            |deviceName|必选|设备名称DeviceName，从物联网平台控制台获取。|
+            |clientId|可选|表示客户端ID，长度不大于64个字符。|
+            |version|可选|认证服务的版本号。|
+            |timestamp|可选|时间戳。时间戳不做时间窗口校验。|
+            |resources|可选|希望获取的资源描述，如MQTT。 多个资源名称用逗号隔开。|
+
+            |参数|类型|说明|
+            |--|--|--|
+            |resources|Struct|资源信息，如MQTT服务器地址等。|
+
+            请求示例
+
+            ```
+            POST /auth/bootstrap HTTP/1.1
+            Host: iot-auth-global.aliyuncs.com
+            Content-Type: application/x-www-form-urlencoded
+            Content-Length: 123
+            productKey=123&timestamp=123&version=default&clientId=123&resources=mqtt&deviceName=test
+            ```
+
+            返回示例
+
+            ```
+            HTTP/1.1 200 OK
+            Server: Tengine
+            Date: Wed, 29 Mar 2017 13:08:36 GMT
+            Content-Type: application/json;charset=utf-8
+            Connection: close
+            {
+              "code" : 200,
+              "data" : {
+                "resources" : {
+                  "mqtt" : {
+                    "host" : "xxx.iot-as-mqtt.cn-shanghai.aliyuncs.com",
+                    "port" : 1883
+                  }
+                }
+              },
+              "message" : "success"
+            }
+            ```
+
+    2.  设备分发中心根据分发的目标地域和实例（就近接入时，将根据设备IP位置动态判断目标地域和实例），返回设备目标实例接入点。
+    3.  设备可以通过三元组和分发服务返回给设备的实例接入点信息，使用MQTT协议与云端建立连接。
+        -   阿里云C SDK接入方式
+
+            建议使用SDK 4.x版本进行设备接入。具体操作，请参见[MQTT接入]()。
+
+        -   非SDK的自行接入方式
+
+            使用Paho提供的嵌入式C语言MQTT开源工程进行设备接入。具体操作，请参见[Paho-MQTT C接入示例](/cn.zh-CN/最佳实践/设备接入/使用Paho接入物联网平台/Paho-MQTT C接入示例.md)。
+
+    4.  （可选）控制台分发设备后，设备会收到如下MQTT消息，提示设备发生了分发，设备将被迫下线。
 
         MQTT消息，数据下行。
 
@@ -78,18 +147,19 @@
         }
         ```
 
-    2.  设备调用SDK封装的Bootstrap接口，携带ProductKey和DeviceName，向设备分发中心的全球统一域名`https://iot-auth-global.aliyuncs.com`发送请求。
-    3.  设备分发中心根据分发的目标地域和实例（就近接入时将根据设备IP位置动态判断目标地域和实例），返回设备的目标接入点。
-    4.  设备利用设备证书计算签名，使用云端返回的接入点，通过MQTT协议的Connect报文与目标地域和实例建立连接。
+    **说明：** 每次连接设备时，建议先完成上述的前3个流程，以免设备存储的接入点与云端不一致，而导致设备连接失败。
+
+    设备也支持本地存储接入点信息，当本地连接信息丢失或连接失败时，可发起Bootstrap请求，重新获取接入点信息。
+
 3.  完成设备开发后，针对不同情况进行以下操作：
 
-    -   对于不具有设备分发能力的存量设备，通过OTA升级，升级到上一步中开发完成的版本，使设备获得分发能力。OTA升级操作请参见[推送升级包到设备端](/cn.zh-CN/监控运维/OTA升级/推送升级包到设备端.md)。
+    -   对于不具有设备分发能力的存量设备，通过OTA升级，升级到上一步中开发完成的版本，使设备获得分发能力。具体操作，请参见[推送升级包到设备端](/cn.zh-CN/监控运维/OTA升级/推送升级包到设备端.md)。
 
         **说明：**
 
-        不具有设备分发能力的存量设备，在进行设备分发前，必须通过OTA升级获得分发能力，否则在控制台操作分发后，设备将无法正常连接物联网平台。
+        不具有设备分发能力的存量设备，在进行设备分发前，必须通过OTA升级获得分发能力，否则在控制台操作分发后，设备将无法正常连接到物联网平台。
 
-    -   对于新设备，向设备烧录设备证书，请参见[烧录设备证书](/cn.zh-CN/设备接入/设备获取设备证书/概述.md)。
+    -   对于新设备，向设备烧录设备证书。具体操作，请参见[烧录设备证书](/cn.zh-CN/设备接入/设备获取设备证书/概述.md)。
 4.  根据业务需求在控制台操作设备分发，将设备分发到指定的地域、实例、账号。
 
     1.  登录[物联网平台控制台](https://iot.console.aliyun.com/)。
@@ -135,7 +205,7 @@
 
 若地域下有多个实例，可从下拉框选择要分发到的实例。 |
         |设备选择方式|可通过两种方式选择要分发的设备：         -   **手动勾选**：从产品列表选择设备所在的产品，再从设备列表选择设备。设备列表翻页时会保持设备选中状态。
-        -   **文件上传**：上传设备分发列表文件。一个文件最多包含1,000条记录，格式为 .csv，可单击**下载模板**获取文件模板。 |
+        -   **文件上传**：上传设备分发列表文件。一个文件最多包含1,000条记录，格式为CSV，可单击**下载模板**获取文件模板。 |
 
     7.  单击**确认**。
 
