--- a/intl.zh-CN/设备管理/物模型/单个添加物模型.md
+++ b/intl.zh-CN/设备管理/物模型/单个添加物模型.md
@@ -27,7 +27,7 @@ keyword: [物联网, IoT, 物联网平台, 物模型, TSL, 功能定义, 属性,
 
     -   自定义属性：在添加自定义功能对话框，选择功能类型为**属性**。设置参数完成后，单击**确认**。
 
-        ![物模型](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3668749951/p10855.png)
+        ![物模型](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3668749951/p10855.png)
 
         属性参数设置说明如下表。
 
@@ -36,7 +36,7 @@ keyword: [物联网, IoT, 物联网平台, 物模型, TSL, 功能定义, 属性,
         |功能名称|属性的名称，例如：用电量。同一产品下功能名称不能重复。
 
 支持中文、英文字母、日文、数字、短划线（-）、下划线（\_）、正斜线（/）和点号（.），且必须以中文、英文、日文或数字开头，不超过30个字符。 |
-        |标识符|属性唯一标识符，在产品中具有唯一性。即Alink JSON格式中的identifier的值，作为设备上报该属性数据的Key，云端根据该标识符校验是否接收数据。支持英文、数字和下划线（\_），不超过50个字符，例如：PowerComsuption。 **说明：** 不能用以下系统保留参数作为标识符：set、get、post、time、value。 |
+        |标识符|属性唯一标识符，在产品中具有唯一性。即Alink JSON格式中的identifier的值，作为设备上报该属性数据的Key，云端根据该标识符校验是否接收数据。支持英文、数字和下划线（\_），不超过50个字符，例如：PowerConsumption。 **说明：** 不能用以下系统保留参数作为标识符：set、get、post、time、value。 |
         |数据类型|        -   int32：32位整型。需定义取值范围、步长和单位符号。
         -   float：单精度浮点型。需定义取值范围、步长和单位符号。
         -   double：双精度浮点型。需定义取值范围、步长和单位符号。
@@ -95,7 +95,7 @@ keyword: [物联网, IoT, 物联网平台, 物模型, TSL, 功能定义, 属性,
 
         **说明：** 接入网关的协议选择为Modbus时，不支持定义任何服务。
 
-        ![物模型](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3668749951/p10856.png)
+        ![物模型](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3668749951/p10856.png)
 
         服务参数设置说明如下表。
 
@@ -134,7 +134,7 @@ keyword: [物联网, IoT, 物联网平台, 物模型, TSL, 功能定义, 属性,
 
         **说明：** 接入网关的协议选择为Modbus时，不支持定义任何事件。
 
-        ![物模型](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3668749951/p10857.png)
+        ![物模型](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3668749951/p10857.png)
 
         事件参数设置说明如下表。
 
