--- a/cn.zh-CN/设备管理/物模型/单个添加物模型.md
+++ b/cn.zh-CN/设备管理/物模型/单个添加物模型.md
@@ -15,7 +15,7 @@ keyword: [物联网, IoT, 物联网平台, 物模型, TSL, 功能定义, 属性,
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏，选择**设备管理** \> **产品**。
 
@@ -27,7 +27,7 @@ keyword: [物联网, IoT, 物联网平台, 物模型, TSL, 功能定义, 属性,
 
 7.  添加标准功能。如果您创建产品时选择了标准品类，则物联网平台已为该品类预定义了标准功能。选择**添加标准功能**，然后在弹出的双列表框中，选择适用于该产品的标准功能。
 
-    ![添加标准功能](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3668749951/p120806.png)
+    ![添加标准功能](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3668749951/p120806.png)
 
 8.  添加自定义功能。
 
@@ -35,7 +35,7 @@ keyword: [物联网, IoT, 物联网平台, 物模型, TSL, 功能定义, 属性,
 
     -   自定义属性：在添加自定义功能对话框，选择功能类型为**属性**。设置参数完成后，单击**确认**。
 
-        ![物模型](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3668749951/p10855.png)
+        ![物模型](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3668749951/p10855.png)
 
         属性参数设置说明如下表。
 
@@ -48,7 +48,7 @@ keyword: [物联网, IoT, 物联网平台, 物模型, TSL, 功能定义, 属性,
 输入功能名称时，将从标准功能库中筛选匹配的标准功能供您选择，您可以参考标准功能进行配置。
 
 **说明：** 当接入网关协议为Modbus时，不支持标准属性，仅支持自定义属性。 |
-        |标识符|属性唯一标识符，在产品中具有唯一性。即Alink JSON格式中的identifier的值，作为设备上报该属性数据的Key，云端根据该标识符校验是否接收数据。支持英文、数字和下划线（\_），不超过50个字符，例如：PowerComsuption。 **说明：** 不能用以下系统保留参数作为标识符：set、get、post、time、value。 |
+        |标识符|属性唯一标识符，在产品中具有唯一性。即Alink JSON格式中的identifier的值，作为设备上报该属性数据的Key，云端根据该标识符校验是否接收数据。支持英文、数字和下划线（\_），不超过50个字符，例如：PowerConsumption。 **说明：** 不能用以下系统保留参数作为标识符：set、get、post、time、value。 |
         |数据类型|        -   int32：32位整型。需定义取值范围、步长和单位符号。
         -   float：单精度浮点型。需定义取值范围、步长和单位符号。
         -   double：双精度浮点型。需定义取值范围、步长和单位符号。
@@ -107,7 +107,7 @@ keyword: [物联网, IoT, 物联网平台, 物模型, TSL, 功能定义, 属性,
 
         **说明：** 接入网关的协议选择为Modbus时，不支持定义任何服务。
 
-        ![物模型](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3668749951/p10856.png)
+        ![物模型](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3668749951/p10856.png)
 
         服务参数设置说明如下表。
 
@@ -148,7 +148,7 @@ keyword: [物联网, IoT, 物联网平台, 物模型, TSL, 功能定义, 属性,
 
         **说明：** 接入网关的协议选择为Modbus时，不支持定义任何事件。
 
-        ![物模型](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3668749951/p10857.png)
+        ![物模型](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3668749951/p10857.png)
 
         事件参数设置说明如下表。
 
