--- a/intl.zh-CN/云端开发指南/云端API参考/错误码.md
+++ b/intl.zh-CN/云端开发指南/云端API参考/错误码.md
@@ -12,7 +12,7 @@
 
 ## 公共错误码
 
-以`iot.common`开头的错误码为公共错误码。
+以`iot.common`、`iot.check`开头的错误码为公共错误码。
 
 |错误码|描述|
 |:--|:-|
@@ -22,8 +22,11 @@
 |iot.common.QueryDevicePropertyActionError|查询设备属性失败。 请确认入参信息正确，然后重试。 |
 |iot.common.QueryProductActionError|查询产品失败。 请确认入参信息正确，然后重试。 |
 |iot.common.QueryProductCountActionError|查询产品总数失败。 请确认入参信息正确，然后重试。 |
-|iot.common.RamActionPermissionDeny|没有资源访问控制（RAM）权限。 请参见[子账号授权文档](/intl.zh-CN/账号与登录/账号授权/RAM授权管理/RAM 和 STS 介绍.md)。 |
+|iot.common.RamActionPermissionDeny|没有资源访问控制（RAM）权限。 请参见[RAM用户授权文档](/intl.zh-CN/账号与登录/账号授权/RAM授权管理/RAM 和 STS 介绍.md)。 |
 |iot.common.AuthActionPermissionDeny|鉴权失败。 原因可能是入参的设备信息不属于当前账号。请确认AccessKey信息和设备信息。 |
+|iot.check.ParameterIsNotLessThanMax|参数A的值必须小于参数B的值。例如，参数startTime值必须小于参数endTime值。请确认入参信息符合上述规则，然后重试。 |
+|iot.common.APINotSupportedInInstance|当前实例不支持该API。公共实例尚未支持该功能。 |
+|iot.common.InvalidFormattedParameter|参数格式错误。请确认入参信息正确，然后重试。 |
 
 ## 产品相关错误码
 
@@ -50,6 +53,14 @@
 |iot.prod.QueryProductAbilityFailed|查询产品功能失败。 请确认入参信息是否正确，如Identifier值等。 |
 |iot.prod.QueryProductListActionError|获取产品列表数据失败。 请确认入参信息正确，然后重试。 |
 |iot.prod.UpdateProductFailed|更新产品信息失败。 请确认入参信息正确，然后重试。 |
+|iot.prod.QueryExtendPropertyFailed|查询产品标签失败。请确认入参信息正确，然后重试。 |
+|iot.prod.InvalidScriptType|数据解析脚本类型无效。|
+|iot.prod.ThingScriptExisted|产品下已存在创建或更新的数据解析脚本。|
+|iot.prod.ConcurrentScriptOperation|操作数据解析脚本失败。请确认不要并发操作数据解析脚本。 |
+|iot.prod.ThingScriptDataFormatError|产品的数据解析脚本类型错误。请确认入参信息正确，然后重试。 |
+|iot.prod.BatchCreateThingModelFailed|创建物模型失败。请确认入参信息正确，然后重试。 |
+|iot.prod.ThingModelNameDuplicated|物模型中存在重复的功能定义名称。请更换功能定义名称，然后重试。 |
+|iot.Prod.NotProductOwner|当前操作者不是产品的拥有者。请确认访问的产品是否已有授权，然后重试。 |
 
 ## 设备相关错误码
 
@@ -76,7 +87,7 @@
 |iot.device.InvalidFormattedDevicePropertyKey|设备属性标识符格式错误。 请查看相关API文档中，关于入参属性格式的描述。 |
 |iot.device.InvalidFormattedDevicePropertiesString|入参设备属性格式错误。 请查看相关API文档中，关于入参属性格式的描述。 |
 |iot.device.InvalidIoTId|设备ID错误。 请调用[QueryDeviceDetail](/intl.zh-CN/云端开发指南/云端API参考/设备管理/QueryDeviceDetail.md)或[QueryDevice](/intl.zh-CN/云端开发指南/云端API参考/设备管理/QueryDevice.md)查看正确的IotId值，或用ProductKey与DeviceName组合代替IotId。 |
-|iot.device.InvalidTimeBucket|指定的时间区间不合法。 请根据API文档中描述正确设置参数。
+|iot.device.InvalidTimeBucket|指定的时间区间不合法。 请设置正确的参数：
 
 -   Asc为0倒序查询时，StartTime必须大于EndTime。
 -   Asc为1正序查询时，StartTime必须小于EndTime。 |
@@ -111,6 +122,7 @@
 |iot.devicesearch.InvalidSQLOrderError|SQL的排序规则错误。|
 |iot.devicesearch.InvalidSQLOperatorTypeError|SQL运算符和数据类型不匹配。|
 |iot.devicesearch.InvalidSQLParamError|不支持的SQL语法。|
+|iot.device.DeviceHasDistributed|同名设备已被分发。请更换设备名称，然后重试。 |
 
 ## 设备分组相关错误码
 
@@ -222,15 +234,7 @@ ALL：发布和订阅。 |
 |iot.rule.CreateRuleException|创建规则过程发生异常。 请确认入参信息正确，然后重试。 |
 |iot.rule.DeleteRuleFailed|删除规则失败。 请确认入参信息正确，然后重试。 |
 |iot.rule.IncorrentRuleActionId|规则动作ID错误。 可调用[ListRuleActions](/intl.zh-CN/云端开发指南/云端API参考/云产品流转/ListRuleActions.md)查看规则动作ID。 |
-|iot.rule.IncorrentRuleActionType|规则动作类型错误。 规则动作类型参数Type支持可选值：
-
--   MNS：消息服务
--   FC：函数计算
--   OTS：表格存储
-
-**说明：** 数据格式为二进制的规则（即规则的DataType参数是BINARY）不支持转发数据至OTS（表格存储）。
-
--   REPUBLISH：另一个物联网平台Topic。 |
+|iot.rule.IncorrentRuleActionType|规则动作类型错误，具体要求请参见[CreateRuleAction](/intl.zh-CN/云端开发指南/云端API参考/云产品流转/CreateRuleAction.md)的Type请求参数说明。 |
 |iot.rule.IncorrentRuleId|规则ID错误。|
 |iot.rule.NullForwardDestForRule|转发数据目的地不能为空。 Configuration中的具体配置方法，请参见[CreateRuleAction](/intl.zh-CN/云端开发指南/云端API参考/云产品流转/CreateRuleAction.md)。 |
 |iot.rule.NullSqlForRule|规则的SQL语句不能为空。|
@@ -493,4 +497,5 @@ ALL：发布和订阅。 |
 |iot.ota.DeleteOtaDefaultModule|默认模块不能被删除。|
 |iot.ota.ListOTAModuleParamError|查询OTA模块列表的请求中参数错误。|
 |iot.ota.ListOTAModuleFailure|查询OTA模块列表的过程中产生异常。|
+|iot.ota.OTAModuleNotExist|删除或更新OTA模块时报错：产品下的OTA模块不存在。|
 
