--- a/cn.zh-CN/监控运维/告警中心.md
+++ b/cn.zh-CN/监控运维/告警中心.md
@@ -2,17 +2,15 @@
 
 物联网平台针对华东2（上海）地域的公共实例提供监控告警功能，处理规则引擎中场景联动规则触发的告警信息。
 
-已创建场景联动规则，并应用到云端。操作详情请参见[云端场景联动](/cn.zh-CN/用户指南/场景联动/云端场景联动.md)。
+已创建场景联动规则，并应用到云端。具体操作，请参见[云端场景联动](/cn.zh-CN/用户指南/场景联动/云端场景联动.md)。
 
 1.  登录[物联网平台控制台](http://iot.console.aliyun.com/)。
 
-2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
-
-    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
+2.  在实例概览页，找到并单击**公共实例**。
 
 3.  在左侧导航栏，选择**监控运维** \> **告警中心**。
 
-4.  在**告警配置**页签，单击**创建告警规则**。
+4.  单击**告警配置**页签，单击**创建告警规则**。
 
 5.  设置告警规则参数。
 
@@ -20,20 +18,20 @@
     |--|--|
     |告警规则名称|设置告警规则名称。支持中文、英文大小写字母、数字、下划线（\_）和短划线（-），长度限制4~32个字符。|
     |告警规则描述|描述您的告警规则。可以为空。|
-    |告警级别|选择告警规则的告警级别。当前支持五个告警级别，告警严重程度关系如下所示： 1\>2\>3\>4\>5 |
+    |告警级别|选择告警规则的告警级别。当前支持五个告警级别，告警严重程度关系为1\>2\>3\>4\>5。|
     |通知方式|选择告警规则被触发后，通知告警处理人员的方式。     -   告警中心：告警规则被触发后，在**告警列表**页签下显示告警信息。默认全部告警信息都在**告警列表**页签下显示。
-    -   钉钉机器人：告警规则被触发后，在**告警列表**页签下显示告警信息的同时，以钉钉机器人的方式，发送消息到钉钉群。选择钉钉机器人后，需要填写钉钉机器人Webhook，详情请参见[钉钉官方文档](https://ding-doc.dingtalk.com/doc#/serverapi2/krgddi)。
+    -   钉钉机器人：告警规则被触发后，在**告警列表**页签下显示告警信息的同时，以钉钉机器人的方式，发送消息到钉钉群。选择钉钉机器人后，需要填写钉钉机器人Webhook，具体操作，请参见[钉钉官方文档](https://ding-doc.dingtalk.com/doc#/serverapi2/krgddi)。
 
 **说明：** 使用钉钉机器人通知方式时，请考虑钉钉机器人的如下限制情况：
 
 每个钉钉机器人每分钟最多发送20条钉钉消息。如果超过20条，会限流10分钟。 |
-    |关联触发场景|选择需要关联的场景联动规则。当所关联的场景被触发时，将会触发此告警。您也可以单击**新增规则**，新增一个场景联动规则，操作详情请参见[云端场景联动](/cn.zh-CN/用户指南/场景联动/云端场景联动.md)。|
+    |关联触发场景|选择需要关联的场景联动规则。当所关联的场景被触发时，将会触发此告警。您也可以单击**新增规则**，新增一个场景联动规则，具体操作，请参见[云端场景联动](/cn.zh-CN/用户指南/场景联动/云端场景联动.md)。|
 
 6.  单击**确认**，完成告警规则的创建。当告警规则的云端运行状态显示运行中，表示创建成功。
 
     ![已创建成功的告警规则](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5656649951/p96534.png)
 
-    可通过告警规则对应操作栏中的按钮，管理告警规则：
+    可通过告警规则对应操作栏中的按钮，管理告警规则。
 
     |操作|描述|
     |--|--|
@@ -43,7 +41,7 @@
 
 7.  在**告警列表**页签，可查看当前的待处理告警或全部告警。
 
-    可通过告警对应操作栏中按钮，处理告警：
+    可通过告警对应操作栏中按钮，处理告警。
 
     |操作|描述|
     |--|--|
@@ -51,6 +49,6 @@
     |**忽略**|忽略该告警。|
     |**处理**|输入告警处理意见后单击**确定**。|
 
-    **说明：** 已处理或已忽略的告警，只能进行**查看**操作。
+    **说明：** 已处理或已忽略的告警，仅支持**查看**。
 
 
