--- a/cn.zh-CN/设备管理/设备生命周期管理/创建设备.md
+++ b/cn.zh-CN/设备管理/设备生命周期管理/创建设备.md
@@ -12,7 +12,7 @@ keyword: [物联网, IoT, 物联网平台, 设备生命周期]
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏，选择**设备管理** \> **产品**。
 
