--- a/cn.zh-CN/设备管理/设备生命周期管理/禁用和启用设备.md
+++ b/cn.zh-CN/设备管理/设备生命周期管理/禁用和启用设备.md
@@ -14,9 +14,13 @@ keyword: [物联网, IoT, 物联网平台, 设备生命周期]
 
 1.  登录[物联网平台控制台](http://iot.console.aliyun.com/)。
 
-2.  在左侧导航栏，选择**设备管理** \> **设备**。
+2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-3.  在设备列表中，找到要禁用的设备，关闭设备对应的**启用状态**开关。
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
+
+3.  在左侧导航栏，选择**设备管理** \> **设备**。
+
+4.  在设备列表中，找到要禁用的设备，关闭设备对应的**启用状态**开关。
 
 
 ## 启用设备
@@ -27,8 +31,12 @@ keyword: [物联网, IoT, 物联网平台, 设备生命周期]
 
 1.  登录[物联网平台控制台](http://iot.console.aliyun.com/)。
 
-2.  在左侧导航栏，选择**设备管理** \> **设备**。
+2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-3.  在设备列表中，找到要启用的设备，打开设备对应的**启用状态**开关。
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
+
+3.  在左侧导航栏，选择**设备管理** \> **设备**。
+
+4.  在设备列表中，找到要启用的设备，打开设备对应的**启用状态**开关。
 
 
