--- a/cn.zh-CN/设备管理/设备生命周期管理/删除设备.md
+++ b/cn.zh-CN/设备管理/设备生命周期管理/删除设备.md
@@ -4,13 +4,13 @@ keyword: [物联网, IoT, 物联网平台, 设备生命周期]
 
 # 删除设备
 
-将设备从物联网平台中删除。设备从物联网平台删除后，设备ID将失效，与该设备关联的其他信息也一并删除，您将无法通过物联网平台执行与该设备关联的任何操作。
+您可以将设备从物联网平台中删除，不限设备当前状态。设备从物联网平台删除后，设备证书将失效，除已产生的云端运行日志外，与该设备关联的其他数据也一并删除。设备的云端运行日志仍可查询，但您将无法通过物联网平台执行与该设备关联的其他任何操作。
 
 1.  登录[物联网平台控制台](http://iot.console.aliyun.com/)。
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏，选择**设备管理** \> **设备**。
 
@@ -18,8 +18,8 @@ keyword: [物联网, IoT, 物联网平台, 设备生命周期]
 
 5.  单击对应的**删除**按钮，并确认删除。
 
-    ![设备生命周期](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/1186549951/p56241.png)
+    ![设备生命周期](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1186549951/p56241.png)
 
 
-设备删除后，该设备证书失效，且不能恢复。
+设备删除后，该设备证书失效，且不能恢复。设备的云端运行日志仍可查询，但无法通过物联网平台执行与该设备关联的其他操作。
 
