--- a/intl.zh-CN/设备管理/标签.md
+++ b/intl.zh-CN/设备管理/标签.md
@@ -1,14 +1,14 @@
 ---
-keyword: [物联网, 物联网平台, IoT, 标签, 设备, 产品, 设备分组, 管理设备]
+keyword: [物联网, 物联网平台, IoT, 标签, 设备, 产品, 设备分组, 管理设备, 地理位置]
 ---
 
 # 标签
 
-物联网平台的标签是您给产品、设备或分组自定义的标识。您可以使用标签功能来灵活管理产品、设备和分组。
+您可以使用标签功能来为产品、设备或分组自定义标识，以便灵活管理产品、设备和分组。
 
 物联网往往涉及量级产品与设备的管理。如何区分不同批次的产品与设备，如何实现批量管理，成为一大挑战。阿里云物联网平台为解决这一问题提供了标签功能。您可以为不同产品、设备或设备分组贴上不同标签，然后根据标签实现分类统一管理。
 
-标签包括产品标签、设备标签和分组标签。标签的结构为`Key:Value`。
+产品标签、设备标签和分组标签的结构为`Key:Value`。
 
 **说明：** 每个产品、设备或分组最多可有100个标签。
 
@@ -26,7 +26,7 @@ keyword: [物联网, 物联网平台, IoT, 标签, 设备, 产品, 设备分组,
 
 4.  单击**标签信息**右侧的**编辑**按钮。
 
-    ![标签](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/5286549951/p2847.png)
+    ![产品标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5286549951/p2847.png)
 
 5.  在弹出的对话框中，输入标签的标签Key和标签Value，然后单击**确认**。
 
@@ -52,7 +52,7 @@ keyword: [物联网, 物联网平台, IoT, 标签, 设备, 产品, 设备分组,
 
 4.  单击**标签信息**右侧的**编辑**按钮。
 
-    ![标签](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/5286549951/p2849.png)
+    ![设备标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5286549951/p2849.png)
 
 5.  在弹出的对话框中，输入标签的标签Key和标签Value，然后单击**确认**。
 
@@ -66,7 +66,7 @@ keyword: [物联网, 物联网平台, IoT, 标签, 设备, 产品, 设备分组,
 
 设备分组用于跨产品管理设备。分组标签通常描述的是一个分组下所有设备和子分组所具有的共性信息，如分组下的设备所在的地域、空间等。需在创建分组后，再为该分组添加标签。
 
-添加分组标签操作步骤：
+在控制台添加分组标签操作步骤：
 
 1.  登录[物联网平台控制台](https://iot.console.aliyun.com/)。
 
@@ -76,7 +76,7 @@ keyword: [物联网, 物联网平台, IoT, 标签, 设备, 产品, 设备分组,
 
 4.  单击**标签信息**右侧的**编辑**按钮。
 
-    ![标签](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/5286549951/p32634.png)
+    ![分组标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5286549951/p32634.png)
 
 5.  在弹出的对话框中，输入标签的标签Key和标签Value，然后单击**确认**。
 
