--- a/cn.zh-CN/设备管理/标签.md
+++ b/cn.zh-CN/设备管理/标签.md
@@ -1,14 +1,14 @@
 ---
-keyword: [物联网, 物联网平台, IoT, 标签, 设备, 产品, 设备分组, 管理设备]
+keyword: [物联网, 物联网平台, IoT, 标签, 设备, 产品, 设备分组, 管理设备, 地理位置]
 ---
 
 # 标签
 
-物联网平台的标签是您给产品、设备或分组自定义的标识。您可以使用标签功能来灵活管理产品、设备和分组。
+您可以使用标签功能来为产品、设备或分组自定义标识，以便灵活管理产品、设备和分组；还可以使用地理位置标签标记设备地理位置，为设备设置GeoLocation属性值。
 
 物联网往往涉及量级产品与设备的管理。如何区分不同批次的产品与设备，如何实现批量管理，成为一大挑战。阿里云物联网平台为解决这一问题提供了标签功能。您可以为不同产品、设备或设备分组贴上不同标签，然后根据标签实现分类统一管理。
 
-标签包括产品标签、设备标签和分组标签。标签的结构为`Key:Value`。
+产品标签、设备标签和分组标签的结构为`Key:Value`。
 
 **说明：** 每个产品、设备或分组最多可有100个标签。
 
@@ -20,15 +20,19 @@ keyword: [物联网, 物联网平台, IoT, 标签, 设备, 产品, 设备分组,
 
 1.  登录[物联网平台控制台](https://iot.console.aliyun.com/)。
 
-2.  在左侧导航栏，选择**设备管理** \> **产品**。
+2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-3.  在产品页面，找到需要添加标签的产品，并单击对应操作栏中的**查看**。
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
-4.  单击**标签信息**右侧的**编辑**按钮。
+3.  在左侧导航栏，选择**设备管理** \> **产品**。
 
-    ![标签](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/5286549951/p2847.png)
+4.  在产品页面，找到需要添加标签的产品，并单击对应操作栏中的**查看**。
 
-5.  在弹出的对话框中，输入标签的标签Key和标签Value，然后单击**确认**。
+5.  单击**标签信息**右侧的**编辑**按钮。
+
+    ![产品标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5286549951/p2847.png)
+
+6.  在弹出的对话框中，输入标签的标签Key和标签Value，然后单击**确认**。
 
     |参数|说明|
     |:-|:-|
@@ -46,15 +50,19 @@ keyword: [物联网, 物联网平台, IoT, 标签, 设备, 产品, 设备分组,
 
 1.  登录[物联网平台控制台](https://iot.console.aliyun.com/)。
 
-2.  在左侧导航栏，选择**设备管理** \> **设备**。
+2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-3.  在**设备**页面，单击要添加标签的设备所对应的**查看**，进入**设备详情**页面。
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
-4.  单击**标签信息**右侧的**编辑**按钮。
+3.  在左侧导航栏，选择**设备管理** \> **设备**。
 
-    ![标签](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/5286549951/p2849.png)
+4.  在**设备**页面，单击要添加标签的设备所对应的**查看**，进入**设备详情**页面。
 
-5.  在弹出的对话框中，输入标签的标签Key和标签Value，然后单击**确认**。
+5.  单击**标签信息**右侧的**编辑**按钮。
+
+    ![设备标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5286549951/p2849.png)
+
+6.  在弹出的对话框中，输入标签的标签Key和标签Value，然后单击**确认**。
 
     |参数|说明|
     |:-|:-|
@@ -66,24 +74,57 @@ keyword: [物联网, 物联网平台, IoT, 标签, 设备, 产品, 设备分组,
 
 设备分组用于跨产品管理设备。分组标签通常描述的是一个分组下所有设备和子分组所具有的共性信息，如分组下的设备所在的地域、空间等。需在创建分组后，再为该分组添加标签。
 
-添加分组标签操作步骤：
+在控制台添加分组标签操作步骤：
 
 1.  登录[物联网平台控制台](https://iot.console.aliyun.com/)。
 
-2.  在左侧导航栏，选择**设备管理** \> **分组**。
+2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-3.  在分组页面，找到需要添加标签的分组，并单击对应操作栏中的**查看**。
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
-4.  单击**标签信息**右侧的**编辑**按钮。
+3.  在左侧导航栏，选择**设备管理** \> **分组**。
 
-    ![标签](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/5286549951/p32634.png)
+4.  在分组页面，找到需要添加标签的分组，并单击对应操作栏中的**查看**。
 
-5.  在弹出的对话框中，输入标签的标签Key和标签Value，然后单击**确认**。
+5.  单击**标签信息**右侧的**编辑**按钮。
+
+    ![分组标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5286549951/p32634.png)
+
+6.  在弹出的对话框中，输入标签的标签Key和标签Value，然后单击**确认**。
 
     |参数|说明|
     |:-|:-|
     |标签Key|可包含英文字母、数字和点号（.），长度不超过30个字符。|
     |标签Value|可包含中文、英文字母、数字、日文、下划线（\_）、短划线（-）、英文冒号（:）和点号（.），长度不超过128个字符，一个中文或日文占2个字符。|
+
+
+## 地理位置标签
+
+地理位置标签用于标记设备的地理位置，结构为`coordinate: 经度:纬度`。
+
+如果设备所属产品的物模型包含GeoLocation属性，设置地理位置标签后，该地理位置信息将同步为GeoLocation属性值。
+
+在控制台设置地理位置标签的操作步骤：
+
+1.  登录[物联网平台控制台](https://iot.console.aliyun.com/)。
+
+2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
+
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
+
+3.  在左侧导航栏，选择**设备管理** \> **设备**。
+
+4.  在**设备**页面，单击要添加标签的设备所对应的**查看**，进入**设备详情**页面。
+
+5.  单击**标签信息**右侧的**编辑**按钮。
+
+    ![地理位置标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6440662061/p173054.png)
+
+6.  在弹出的对话框中，单击地理位置标签的文本框，在弹出的地图中选择位置，可以按地址搜索。
+
+7.  单击设备标签文本框后的**删除**。
+
+8.  单击**确认**，完成设置。
 
 
 ## 批量操作标签
