--- a/cn.zh-CN/设备管理/设备分组.md
+++ b/cn.zh-CN/设备管理/设备分组.md
@@ -15,13 +15,17 @@ keyword: [物联网, 物联网平台, IoT, 设备分组管理, 设备组, 父组
 
 1.  登录[物联网平台控制台](https://iot.console.aliyun.com/)。
 
-2.  单击**设备管理** \> **分组**进入分组管理页面。
+2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-3.  单击**新建分组**，设置分组参数，并单击**保存**。
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
+
+3.  在左侧导航栏，选择**设备管理** \> **分组**进入分组管理页面。
+
+4.  单击**新建分组**，设置分组参数，并单击**保存**。
 
     **说明：** 一个阿里云账号下最多可创建1,000个分组，包括分组和子分组。
 
-    ![设备分组](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/5286549951/p11979.png)
+    ![设备分组](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5286549951/p11979.png)
 
     参数信息解释如下：
 
@@ -30,11 +34,11 @@ keyword: [物联网, 物联网平台, IoT, 设备分组管理, 设备组, 父组
         -   选择指定父组：以指定的分组为父组，创建子分组。
     -   **分组名称**：给该分组创建名称。分组名称支持中文、英文字母、日文、数字和下划线（\_），长度限制4~30，一个中文或日文占2个字符。分组名称必须为账号下唯一，且创建后不能修改。
     -   **分组描述**：输入文字，描述该分组。可为空。
-4.  在分组页面，单击已创建分组对应的**查看**操作按钮，进入分组详情页面。
+5.  在分组页面，单击已创建分组对应的**查看**操作按钮，进入分组详情页面。
 
-5.  （可选）为分组添加标签，即自定义分组标识，以便灵活管理分组。具体操作请参见[分组标签](/cn.zh-CN/设备管理/标签.md)。
+6.  （可选）为分组添加标签，即自定义分组标识，以便灵活管理分组。具体操作请参见[分组标签](/cn.zh-CN/设备管理/标签.md)。
 
-6.  单击**设备列表** \> **添加设备到分组**。搜索并选择设备，单击**确定**将选中设备添加至分组。
+7.  单击**设备列表** \> **添加设备到分组**。搜索并选择设备，单击**确定**将选中设备添加至分组。
 
     搜索设备：
 
@@ -48,7 +52,7 @@ keyword: [物联网, 物联网平台, IoT, 设备分组管理, 设备组, 父组
 
     -   单击**全部**，显示所有设备列表。
     -   单击**已选择**，显示您已选择的设备列表。
-7.  （可选）单击**子分组列表** \> **新建分组**，为分组添加子分组。
+8.  （可选）单击**子分组列表** \> **新建分组**，为分组添加子分组。
 
     子分组功能用于细化设备管理。例如，您可以在“智能家居”分组下，创建“智能厨房”、“智能卧室”等子分组，实现厨房设备和卧室设备的分开管理。具体操作如下：
 
