--- a/intl.zh-CN/设备管理/设备分组.md
+++ b/intl.zh-CN/设备管理/设备分组.md
@@ -15,13 +15,13 @@ keyword: [物联网, 物联网平台, IoT, 设备分组管理, 设备组, 父组
 
 1.  登录[物联网平台控制台](https://iot.console.aliyun.com/)。
 
-2.  单击**设备管理** \> **分组**进入分组管理页面。
+2.  在左侧导航栏，选择**设备管理** \> **分组**进入分组管理页面。
 
 3.  单击**新建分组**，设置分组参数，并单击**保存**。
 
     **说明：** 一个阿里云账号下最多可创建1,000个分组，包括分组和子分组。
 
-    ![设备分组](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/5286549951/p11979.png)
+    ![设备分组](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5286549951/p11979.png)
 
     参数信息解释如下：
 
