--- a/cn.zh-CN/监控运维/实时监控/查看数据指标.md
+++ b/cn.zh-CN/监控运维/实时监控/查看数据指标.md
@@ -12,13 +12,13 @@ keyword: [物联网, 物联网平台, IoT, 实时监控, 设备数量, 消息数
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏中，选择**监控运维** \> **实时监控**。
 
 4.  在数据指标页签下，选择需要查看数据的产品和时间范围，时间范围支持1小时、1天、1周、自定义（最长7天）。
 
-    ![物联网 iot](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/0659549951/p14296.png)
+    ![物联网 iot](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0659549951/p14296.png)
 
 
 ## 数据指标说明
