--- a/cn.zh-CN/监控运维/实时监控/查看设备网络状态.md
+++ b/cn.zh-CN/监控运维/实时监控/查看设备网络状态.md
@@ -16,7 +16,7 @@ keyword: [物联网, 物联网平台, IoT, 实时监控, 设备网络状态]
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏中，选择**监控运维** \> **实时监控**。
 
