--- a/cn.zh-CN/监控运维/在线调试/调试真实设备.md
+++ b/cn.zh-CN/监控运维/在线调试/调试真实设备.md
@@ -10,7 +10,7 @@ keyword: [物联网, 物联网平台, IoT, 在线调试, 真实设备, 物理设
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏，选择**监控运维** \> **在线调试**。
 
@@ -22,7 +22,7 @@ keyword: [物联网, 物联网平台, IoT, 在线调试, 真实设备, 物理设
 
 6.  推送调试指令。
 
-    ![物联网平台在线调试](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3659549951/p34150.png)
+    ![物联网平台在线调试](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3659549951/p34150.png)
 
     可在真实设备上调试的项目如下表所示。
 
