--- a/cn.zh-CN/监控运维/在线调试/调试虚拟设备.md
+++ b/cn.zh-CN/监控运维/在线调试/调试虚拟设备.md
@@ -22,7 +22,7 @@ keyword: [物联网, 物联网平台, IoT, 虚拟设备, 在线调试, 模拟]
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏，选择**监控运维** \> **在线调试**。
 
@@ -34,7 +34,7 @@ keyword: [物联网, 物联网平台, IoT, 虚拟设备, 在线调试, 模拟]
 
 6.  推送调试指令。
 
-    ![虚拟设备调试](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4659549951/p42138.png)
+    ![虚拟设备调试](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4659549951/p42138.png)
 
     |调试项目|操作步骤|
     |----|----|
