--- a/cn.zh-CN/监控运维/设备模拟器.md
+++ b/cn.zh-CN/监控运维/设备模拟器.md
@@ -30,7 +30,7 @@ keyword: [物联网, 物联网平台, IoT, 模拟, 模拟器]
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏，选择**监控运维** \> **设备模拟器**。
 
@@ -40,7 +40,7 @@ keyword: [物联网, 物联网平台, IoT, 模拟, 模拟器]
 
 6.  推送调试指令。
 
-    ![自定义Topic-上行](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/5659549951/p135210.png)
+    ![自定义Topic-上行](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5659549951/p135210.png)
 
     |调试项目|操作步骤|
     |----|----|
