--- a/cn.zh-CN/监控运维/日志服务/云端运行日志.md
+++ b/cn.zh-CN/监控运维/日志服务/云端运行日志.md
@@ -10,7 +10,7 @@ keyword: [物联网, 物联网平台, IoT, 设备日志, 物模型数据, 上行
 
 上行消息的日志业务类型如下图所示。
 
-![上行消息日志](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9067013061/p174666.jpg)
+![上行消息日志](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9067013061/p174666.jpg)
 
 1.  设备上报数据到IoT Hub，打印设备到云消息日志，包含消息的Topic。
 2.  对于数据处理的不同业务模块，打印本模块的日志。
@@ -18,7 +18,7 @@ keyword: [物联网, 物联网平台, IoT, 设备日志, 物模型数据, 上行
 
 下行消息的日志业务类型如下图所示。
 
-![下行消息日志](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9067013061/p174665.jpg)
+![下行消息日志](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9067013061/p174665.jpg)
 
 1.  用户通过API调用产生消息，打印API调用日志，包含API名称。
 2.  对于数据处理的不同业务模块，打印本模块的日志。
@@ -30,7 +30,7 @@ keyword: [物联网, 物联网平台, IoT, 设备日志, 物模型数据, 上行
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏，单击**监控运维** \> **日志服务**，进入云端运行日志页签。
 
@@ -81,6 +81,7 @@ keyword: [物联网, 物联网平台, IoT, 设备日志, 物模型数据, 上行
 |业务一级区分符，表示业务模块。|
 |操作|显示相应的操作名称、API名称、服务的method，或消息的Topic。其中： -   OTA升级相关操作：
     -   OTAFirmwarePush：升级包推送，包括发起时推送、确认时推送、上线时推送。
+    -   OTAFirmwareRequest：设备端主动请求OTA升级包信息。
     -   OTAVersionReport：设备上报OTA模块版本。
     -   OTAProgressReport：设备上报升级进度。
 -   数据解析相关操作：
