--- a/cn.zh-CN/监控运维/日志服务/设备本地日志.md
+++ b/cn.zh-CN/监控运维/日志服务/设备本地日志.md
@@ -15,7 +15,7 @@ keyword: [物联网, 物联网平台, IoT, 设备日志, 本地日志]
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏，单击**监控运维** \> **日志服务**。
 
