--- a/cn.zh-CN/监控运维/日志服务/日志转储.md
+++ b/cn.zh-CN/监控运维/日志服务/日志转储.md
@@ -6,7 +6,7 @@ keyword: [物联网, 物联网平台, IoT, 设备日志, 日志服务, 日志报
 
 物联网平台控制台的日志服务默认支持存储7天内的日志，同时支持将云端运行日志导出到您的阿里云日志服务的Logstore中进行长期存储。开通日志转储后，支持在物联网平台控制台查询分析日志，并提供日志报表、报表订阅、告警通知等功能。
 
-已开通日志服务，参见[日志服务准备流程](/cn.zh-CN/数据采集/准备工作/准备流程.md)。
+已开通日志服务，参见[日志服务准备流程](/cn.zh-CN/数据采集/准备工作/准备工作.md)。
 
 ## 开通日志转储
 
@@ -18,7 +18,7 @@ keyword: [物联网, 物联网平台, IoT, 设备日志, 日志服务, 日志报
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏，选择**监控运维** \> **日志服务**。
 
@@ -71,7 +71,7 @@ keyword: [物联网, 物联网平台, IoT, 设备日志, 日志服务, 日志报
     报表时间范围和时间粒度说明：
 
     -   报表默认展示最近1小时（整点时间）的数据，折线图的粒度为1分钟。
-    -   设置时间范围，可在页面右上角单击蓝色的时间设置下拉框，或在单个报表右上角单击![按钮](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/8659549951/p134213.jpg)\>**选择时间范围**进行设置。
+    -   设置时间范围，可在页面右上角单击蓝色的时间设置下拉框，或在单个报表右上角单击![按钮](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8659549951/p134213.jpg)\>**选择时间范围**进行设置。
     -   设置折线图的时间粒度，需要在**原始日志**页签使用SQL语言进行设置。相关语法请参见[日期和时间函数](/cn.zh-CN/查询与分析/SQL分析语法与功能/日期和时间函数.md)。
 
         例如：使用`bizCode:device | SELECT date_format(date_trunc('hour',__time__), '%m-%d %H:%i') AS Time, count(1) AS count , operation GROUP BY Time, operation ORDER BY Time limit 1440`，将时间粒度设为1小时。
@@ -87,7 +87,7 @@ keyword: [物联网, 物联网平台, IoT, 设备日志, 日志服务, 日志报
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏，选择**监控运维** \> **日志服务**。
 
