--- a/cn.zh-CN/消息通信/云产品流转/设置数据流转规则.md
+++ b/cn.zh-CN/消息通信/云产品流转/设置数据流转规则.md
@@ -12,7 +12,7 @@ keyword: [物联网, 物联网平台, IoT, 规则引擎, 流转数据, 发送数
 
 3.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 4.  在**云产品流转**页，单击**创建规则**。
 
@@ -24,7 +24,7 @@ keyword: [物联网, 物联网平台, IoT, 规则引擎, 流转数据, 发送数
     |数据格式|选择该规则处理数据的格式。可选：JSON和二进制。 **说明：**
 
     -   因数据流转基于Topic处理数据，此处的数据格式需与被处理Topic中的数据格式保持一致。
-    -   若选择为二进制，该规则不能处理基础通信Topic、物模型通信Topic的消息，且不能将数据转发至表格存储、时序时空数据库和云数据库RDS版。 |
+    -   若选择为二进制，该规则不能处理基础通信Topic、物模型通信Topic的消息，且不能将数据转发至实例内的时序数据存储、时序数据库、表格存储和云数据库RDS版。 |
     |规则描述|规则描述信息。|
     |资源组|将该规则划归为某个资源组。默认选择账号全部资源，可以选择已创建的资源组。通过资源组管理，可以授予指定子账号查看和操作该规则，而未授权的子账号则不可以查看和操作该规则。关于资源组，请参见[什么是资源组]()。**说明：** 该功能目前仅适用于白名单用户。如有需要，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)，提供您的阿里云账号UID，申请成为白名单用户。
 
