--- a/cn.zh-CN/设备管理/设备划归/设备授权/授权设备.md
+++ b/cn.zh-CN/设备管理/设备划归/设备授权/授权设备.md
@@ -22,7 +22,7 @@ keyword: [IoT, 物联网, 物联网平台, 设备划归, 转移设备, 授权设
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏，选择**设备划归** \> **设备授权**。
 
@@ -42,7 +42,7 @@ keyword: [IoT, 物联网, 物联网平台, 设备划归, 转移设备, 授权设
 
     在**设备**页签下，列表显示已授权设备；在**产品**页签下，列表显示已授权设备所属产品。
 
-    ![授权设备](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3386549951/p129718.png)
+    ![授权设备](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3386549951/p129718.png)
 
 7.  （可选）在列表中单击设备或产品对应的**取消授权**并确认，被授权方即失去相应权限。
 
@@ -57,7 +57,7 @@ keyword: [IoT, 物联网, 物联网平台, 设备划归, 转移设备, 授权设
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏，选择**设备管理** \> **产品**。
 
