--- a/cn.zh-CN/最佳实践/场景应用/物联网平台对接第三方服务-天气查询.md
+++ b/cn.zh-CN/最佳实践/场景应用/物联网平台对接第三方服务-天气查询.md
@@ -15,7 +15,7 @@ keyword: [IoT, 物联网, 查询天气]
 
     2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-        ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+        ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
     3.  选择**设备管理** \> **产品** \> **创建产品**，创建一个产品，请参见[创建产品](/cn.zh-CN/设备接入/创建产品.md)。
 
@@ -25,7 +25,7 @@ keyword: [IoT, 物联网, 查询天气]
 
     6.  在产品详情页，选择**Topic类列表** \> **自定义Topic** \> **定义Topic类**，定义查询天气和接收查询结果的Topic。Topic如下图所示。
 
-        ![自定义Topic](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/8731649951/p4509.png)
+        ![自定义Topic](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8731649951/p4509.png)
 
 2.  开发设备端SDK。
 
@@ -146,7 +146,7 @@ keyword: [IoT, 物联网, 查询天气]
 
         其中，自定义model如下图所示。
 
-        ![自定义model](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/8731649951/p4521.png)
+        ![自定义model](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8731649951/p4521.png)
 
     以上函数定义，使用了实现函数计算预留的接口PojoRequestHandler，提供了实现StreamRequestHandler接口的方式。您可以根据自己的需要进行接口选择，请参见[函数计算Java使用说明](https://help.aliyun.com/document_detail/58887.html)。
 
@@ -162,17 +162,17 @@ keyword: [IoT, 物联网, 查询天气]
 
     1.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-        ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+        ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
     2.  选择**规则引擎** \> **云产品流转** \> **创建规则**，创建一个规则。
 
     3.  单击规则对应的**查看**，在数据流转规则页，单击**编写SQL**，编写消息处理SQL。如下图所示。
 
-        ![编写SQL](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/8731649951/p4513.png)
+        ![编写SQL](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8731649951/p4513.png)
 
     4.  单击**添加操作**，配置转发操作，将数据转发到函数计算中进行计算处理，请参见[数据转发到函数计算](/cn.zh-CN/消息通信/云产品流转/数据流转使用示例/数据转发到函数计算.md)。
 
-        ![添加操作](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/8731649951/p129544.png)
+        ![添加操作](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8731649951/p129544.png)
 
     5.  在云产品流转页，单击规则对应的**启动**，启动规则。
 
@@ -182,16 +182,16 @@ keyword: [IoT, 物联网, 查询天气]
 
     1.  模拟设备登录，并订阅Topic。
 
-        ![订阅Topic](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/8731649951/p4619.png)
+        ![订阅Topic](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8731649951/p4619.png)
 
     2.  登录[物联网平台控制台](https://iot.console.aliyun.com)，在对应实例下的设备详情页的Topic列表中，单击发布查询天气消息的Topic对应的**发布消息**，输入测试信息，进行试验查询。
 
         **说明：** 因为规则SQL中定义了筛选消息中city、cityid、cityCode、location、ip字段，可根据任一字段查询当地天气情况。
 
-        ![发布消息](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9731649951/p4622.png)
+        ![发布消息](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9731649951/p4622.png)
 
     3.  查看设备端是否接收到天气消息。
 
-        ![接收到天气消息](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9731649951/p4628.png)
+        ![接收到天气消息](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9731649951/p4628.png)
 
 
