--- a/cn.zh-CN/最佳实践/消息通信/云端解析设备透传数据.md
+++ b/cn.zh-CN/最佳实践/消息通信/云端解析设备透传数据.md
@@ -4,7 +4,7 @@
 
 数据解析流程图如下所示。
 
-![iot](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/8531649951/p71182.png)
+![iot](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8531649951/p71182.png)
 
 ## 设备端接入物联网平台
 
@@ -14,7 +14,7 @@
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏，选择**设备管理** \> **产品**，再单击**创建产品**，创建一个产品。
 
@@ -31,7 +31,7 @@
 
 5.  单击**编辑草稿** \> **添加自定义功能**，添加以下属性。
 
-    ![物模型属性](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/8531649951/p92997.png)
+    ![物模型属性](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8531649951/p92997.png)
 
 6.  单击**发布上线**，将物模型发布为正式版。
 
@@ -149,12 +149,12 @@
 
         右侧运行结果栏显示解析结果如下图所示。
 
-        ![设备上报数据](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/8531649951/p137796.png)
+        ![设备上报数据](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8531649951/p137796.png)
 
 6.  确认脚本能正确解析数据后，单击**提交**，将脚本提交到物联网平台系统。
 
 
 脚本提交后，设备端再向物联网平台上报数据时，物联网平台会调用脚本进行数据解析。解析后的数据将显示在设备对应的设备详情页的**物模型数据** \> **运行状态**页签下。
 
-![运行状态](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/8531649951/p111751.png)
+![运行状态](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8531649951/p111751.png)
 
