--- a/cn.zh-CN/设备管理/物模型/批量添加物模型.md
+++ b/cn.zh-CN/设备管理/物模型/批量添加物模型.md
@@ -19,17 +19,17 @@ keyword: [物联网, IoT, 物联网平台, 物模型, TSL, 功能定义, 属性,
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏中，选择**设备管理** \> **产品**。
 
-4.  在产品管理页的产品列表中，单击产品对应的**查看**操作按钮。
+4.  在产品页的产品列表中，单击产品对应的**查看**按钮。
 
-5.  在产品详情页，单击**功能定义** \> **编辑草稿**。
+5.  在产品详情页，单击**功能定义**页签，然后单击**编辑草稿**。
 
 6.  单击**快速导入**，然后在弹出的对话框中导入物模型。
 
-    ![导入物模型](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4186549951/p86909.png)
+    ![导入物模型](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4186549951/p86909.png)
 
     可通过以下两种方法导入物模型。
 
