--- a/cn.zh-CN/最佳实践/设备接入/RTOS设备通过TCP模组上云/创建产品和设备.md
+++ b/cn.zh-CN/最佳实践/设备接入/RTOS设备通过TCP模组上云/创建产品和设备.md
@@ -12,13 +12,13 @@ keyword: [IoT, 物联网, 实时操作系统（RTOS）, 微控制单元（MCU）
 
     1.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-        ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+        ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
     2.  在左侧导航栏，选择**设备管理** \> **产品**。
 
     3.  在产品页，单击**创建产品**，填入产品信息，然后单击**确认**。
 
-        ![iot product](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/5331649951/p68110.png)
+        ![iot product](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5331649951/p68110.png)
 
 3.  在新创建的产品下添加设备。
 
