--- a/cn.zh-CN/最佳实践/物模型接入价值与实践/云端配置.md
+++ b/cn.zh-CN/最佳实践/物模型接入价值与实践/云端配置.md
@@ -15,7 +15,7 @@
 <conref-wrap id="conref-wrap-myv-uqr-2nu">
 * 在 **实例概览** 页，找到对应的实例，单击实例进入 **实例详情** 页。
 
-  ![实例概览](//static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+  ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 <conref-suf id="conref-suf-ulk-e5b-8ma">
 </conref-suf>
@@ -27,7 +27,7 @@
 
 3. 按照页面提示填写信息，然后单击 **保存** 。
 
-   ![充电桩产品 ](//static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3931649951/p139282.png)
+   ![充电桩产品 ](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3931649951/p139282.png)
    
 
    |  参数  |                                                                                                                                                                                                                    描述                                                                                                                                                                                                                     |
@@ -68,29 +68,29 @@
 
    * 自定义属性：本示例中，按如下图设置属性参数。
 
-     ![充电桩产品添加属性](//static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3931649951/p139866.png)
+     ![充电桩产品添加属性](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3931649951/p139866.png)
      
    
    * 自定义服务：本示例中，按如下图设置服务参数。
 
-     ![充电桩产品添加自定义服务](//static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3931649951/p161066.png)
+     ![充电桩产品添加自定义服务](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3931649951/p161066.png)
 
      按如下图所示，设置服务的 **输入参数** 。
 
-     ![充电桩-服务-输入参数](//static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3931649951/p161068.png)
+     ![充电桩-服务-输入参数](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3931649951/p161068.png)
 
      按如下图所示，设置服务的 **输出参数** 。
 
-     ![充电桩-服务-输出参数](//static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4931649951/p161070.png)
+     ![充电桩-服务-输出参数](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4931649951/p161070.png)
      
    
    * 自定义事件：本示例中，按如下图设置事件参数。
 
-     ![充电桩产品添加事件](//static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4931649951/p139867.png)
+     ![充电桩产品添加事件](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4931649951/p139867.png)
 
      按如下图所示，设置事件的 **输出参数** 。
 
-     ![充电桩产品事件的输出参数](//static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4931649951/p139868.png)
+     ![充电桩产品事件的输出参数](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4931649951/p139868.png)
      
    
 
@@ -98,11 +98,11 @@
 
 5. 发布物模型。
 
-   ![发布充电桩产品的物模型](//static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4931649951/p139872.png)
+   ![发布充电桩产品的物模型](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4931649951/p139872.png)
 
    发布物模型成功后，可在 **功能定义** 页签单击 **物模型 TSL** ，查看物模型完整代码。
 
-   ![充电桩产品完整物模型代码](//static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4931649951/p139895.png)
+   ![充电桩产品完整物模型代码](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4931649951/p139895.png)
    
 
 
@@ -130,7 +130,7 @@
 
 1. 在充电桩产品的 **产品详情** 页，单击 **前往** **管理** 。
 
-   ![充电桩-前往管理](//static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4931649951/p139898.png)
+   ![充电桩-前往管理](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4931649951/p139898.png)
    
 
 2. 在 **设备** 页，单击 **添加设备** 。
@@ -139,11 +139,11 @@
 
 3. 在 **添加设备** 对话框中，输入设备信息，单击 **确认** 。
 
-   ![充电桩添加设备](//static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4931649951/p139900.png)
+   ![充电桩添加设备](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4931649951/p139900.png)
 
    设备创建成功后，您可以 **查看设备证书** 。设备证书由设备的ProductKey、DeviceName和DeviceSecret组成，是设备与物联网平台进行通信的重要身份认证，建议您妥善保管。
 
-   ![充电桩设备证书](//static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4931649951/p139903.png)
+   ![充电桩设备证书](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4931649951/p139903.png)
    
 
 
