--- a/cn.zh-CN/消息通信/云产品流转/数据流转使用示例/数据转发到函数计算.md
+++ b/cn.zh-CN/消息通信/云产品流转/数据流转使用示例/数据转发到函数计算.md
@@ -11,7 +11,7 @@ keyword: [物联网, 物联网平台, IoT, 规则引擎, 流转数据, 发送数
 
 数据流转示意图如下。
 
-![数据流转至函数计算](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/6953860061/p168836.png)
+![数据流转至函数计算](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6953860061/p168836.png)
 
 规则引擎数据转发功能将设备中的数据转发到FC，FC执行函数的业务脚本，您可以通过业务脚本实现丰富的功能。
 
@@ -19,13 +19,17 @@ keyword: [物联网, 物联网平台, IoT, 规则引擎, 流转数据, 发送数
 
 1.  登录[物联网平台控制台](http://iot.console.aliyun.com/)。
 
-2.  在左侧导航栏，选择**规则引擎** \> **云产品流转**。
+2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-3.  单击规则对应的**查看**，进入数据流转规则页。
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
-4.  单击**转发数据**一栏对应的**添加操作**。
+3.  在左侧导航栏，选择**规则引擎** \> **云产品流转**。
 
-5.  在添加操作对话框中，选择操作为**发送数据到函数计算（FC）中**。按照界面提示，设置其他信息，单击**确认**。
+4.  单击规则对应的**查看**，进入数据流转规则页。
+
+5.  单击**转发数据**一栏对应的**添加操作**。
+
+6.  在添加操作对话框中，选择操作为**发送数据到函数计算（FC）中**。按照界面提示，设置其他信息，单击**确认**。
 
     |参数|说明|
     |:-|:-|
@@ -35,11 +39,11 @@ keyword: [物联网, 物联网平台, IoT, 规则引擎, 流转数据, 发送数
     |函数|选择接收数据的函数。您可以单击**创建函数**，跳转到函数计算控制台，创建函数。 |
     |授权|授权物联网平台将数据写入函数计算。 如您还未创建相关角色，单击**创建RAM角色**，跳转到RAM控制台，创建角色和授权策略，请参见[创建RAM角色](/cn.zh-CN/角色管理/创建RAM角色/创建可信实体为阿里云账号的RAM角色.md)。 |
 
-6.  回到云产品流转页，单击规则对应的**启动**按钮启动规则。
+7.  回到云产品流转页，单击规则对应的**启动**按钮启动规则。
 
-7.  测试。
+8.  测试。
 
-    向规则SQL中定义的Topic发布一条消息，然后在函数计算控制台的函数详情页面的**日志查询**页签查看函数执行记录。单击右上角**实时监控**，可查看函数的监控统计，监控有大约5分钟的延时。
+    向规则SQL中定义的Topic发布一条消息，然后在[函数计算控制台](https://fc.console.aliyun.com/)的函数详情页面的**日志查询**页签查看函数执行记录。单击右上角**实时监控**，可查看函数的监控统计，监控有大约5分钟的延时。
 
 
 ## 操作样例
