--- a/cn.zh-CN/最佳实践/场景应用/传感器数据采集解决方案/云端配置开发.md
+++ b/cn.zh-CN/最佳实践/场景应用/传感器数据采集解决方案/云端配置开发.md
@@ -15,7 +15,7 @@ keyword: [物联网, IoT, 传感器, 数据采集, MQTT, 服务端订阅, AMQP, 
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  创建手持红外体温计产品。
 
@@ -35,7 +35,7 @@ keyword: [物联网, IoT, 传感器, 数据采集, MQTT, 服务端订阅, AMQP, 
 
     2.  单击**定义Topic类**，增加用于数据传输的Topic，如下图所示。
 
-        ![自定义Topic](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4408649951/p110039.png)
+        ![自定义Topic](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4408649951/p110039.png)
 
 5.  添加设备。
 
@@ -49,7 +49,7 @@ keyword: [物联网, IoT, 传感器, 数据采集, MQTT, 服务端订阅, AMQP, 
 
     3.  在设备列表，单击设备对应的**查看**，进入设备详情页，单击**标签信息**后的**编辑**，为设备配置标签。
 
-        ![设备标签](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4908649951/p110057.png)
+        ![设备标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4908649951/p110057.png)
 
 6.  创建AMQP服务端订阅消费组。
 
@@ -71,7 +71,7 @@ keyword: [物联网, IoT, 传感器, 数据采集, MQTT, 服务端订阅, AMQP, 
 
         其中，数据格式选择为JSON。
 
-        ![创建规则](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4408649951/p109991.png)
+        ![创建规则](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4408649951/p109991.png)
 
     4.  单击**确认**，自动跳转到规则详情页。
 
@@ -91,15 +91,15 @@ keyword: [物联网, IoT, 传感器, 数据采集, MQTT, 服务端订阅, AMQP, 
         "/a1*********/+/user/data"
         ```
 
-        ![编写SQL](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4408649951/p110046.png)
+        ![编写SQL](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4408649951/p110046.png)
 
     6.  在规则详情页，单击**添加操作**，添加数据转发操作到已创建的AMQP服务端订阅消费组。单击**确认**。
 
-        ![添加操作](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9308649951/p162260.png)
+        ![添加操作](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9308649951/p162260.png)
 
         至此已完成规则引擎配置，完整的规则配置如下图所示。
 
-        ![完整的规则配置](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4408649951/p110050.png)
+        ![完整的规则配置](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4408649951/p110050.png)
 
     7.  回到云产品流转页，单击规则对应的**启动**按钮，启动规则。
 
