--- a/cn.zh-CN/消息通信/广播通信.md
+++ b/cn.zh-CN/消息通信/广播通信.md
@@ -8,7 +8,7 @@
 
 广播Topic中的MessageId是云端生成的消息ID，成功发送消息后，将作为[PubBroadcast](/cn.zh-CN/云端开发指南/云端API参考/消息通信/PubBroadcast.md)接口的返回数据返回业务服务器。
 
-![广播通信 ](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9186549951/p88177.png)
+![广播通信 ](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9186549951/p88177.png)
 
 ## 使用限制
 
@@ -54,7 +54,7 @@
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏，单击**设备管理** \> **产品**。
 
@@ -204,15 +204,15 @@
 
 门锁1：
 
-![门锁1](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9186549951/p88185.png)
+![门锁1](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9186549951/p88185.png)
 
 门锁2：
 
-![门锁2](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/0286549951/p88186.png)
+![门锁2](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0286549951/p88186.png)
 
 门锁3：
 
-![门锁3](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/0286549951/p88188.png)
+![门锁3](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0286549951/p88188.png)
 
 ## 附录：Demo
 
