--- a/cn.zh-CN/最佳实践/消息通信/物模型通信.md
+++ b/cn.zh-CN/最佳实践/消息通信/物模型通信.md
@@ -17,7 +17,7 @@ keyword: [物联网, IoT, 物联网平台, 物模型, TSL, 通信]
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏，单击**设备管理** \> **产品**。
 
@@ -29,7 +29,7 @@ keyword: [物联网, IoT, 物联网平台, 物模型, TSL, 通信]
 
     本示例中使用了以下属性、服务和事件：
 
-    ![物模型通信](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/2531649951/p92991.png)
+    ![物模型通信](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2531649951/p92991.png)
 
     定义物模型的操作方法，请参见[单个添加物模型](/cn.zh-CN/设备管理/物模型/单个添加物模型.md)。
 
@@ -83,7 +83,7 @@ keyword: [物联网, IoT, 物联网平台, 物模型, TSL, 通信]
     |:-|:-|
     |accessKeyID|您的阿里云账号的AccessKey ID。 将光标定位到您的账号头像上，选择**AccessKey管理**，进入安全信息管理页，可创建或查看您的AccessKey。 |
     |accessKeySecret|您的阿里云账号的AccessKey Secret。查看方法同上AccessKey ID。|
-    |regionId|您的物联网设备所属地域ID。地域ID的表达方法，请参见[地域和可用区](/cn.zh-CN/产品简介/地域和可用区.md)。|
+    |regionId|您的物联网设备所属地域ID。地域ID的表达方法，请参见[地域和可用区]()。|
 
 
 ## 设备端SDK上报属性和事件
@@ -499,13 +499,13 @@ public static void main(String[] args) {
 
 -   查看本地日志。
 
-    ![物模型通信](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/2531649951/p54075.png)
+    ![物模型通信](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2531649951/p54075.png)
 
 -   在物联网平台控制台，对应实例下设备的设备详情页，
 
     -   运行状态页签下，查看设备最后一次上报的属性值和属性数据记录。
     -   事件管理页签下，查看设备上报的事件记录。
     -   服务调用页签下，查看云端下发的服务调用记录。
-    ![物模型通信](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/2531649951/p54079.png)
+    ![物模型通信](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2531649951/p54079.png)
 
 
